--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    color: #00bff3;
+    @apply text-6xl;
+  }
+}
