--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,3 +8,36 @@
     @apply text-6xl;
   }
 }
+
+@layer components {
+  .btn {
+    @apply active:bg-gray-500
+    hover:bg-gray-500
+    hover:text-white
+    border-gray-500
+    cursor-pointer
+    border-4
+    rounded-md
+    inline-block
+    p-2
+    mt-2
+    mb-4;
+  }
+
+  .btn-purple {
+    @apply hover:bg-purple-500
+    border-purple-500;
+  }
+  .btn-red {
+    @apply hover:bg-red-500
+    border-red-500;
+  }
+  .btn-blue {
+    @apply hover:bg-blue-500
+    border-blue-500;
+  }
+  .btn-yellow {
+    @apply hover:bg-yellow-300
+    border-yellow-300;
+  }
+}
