--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,12 @@
       hover:bg-gray-500
       hover:text-white cursor-pointer
       border-gray-500
-      border-4
       rounded-md
       inline-block
       p-2
       mt-2
       mb-4;
+    @apply border-4 !important;
   }
 
   .btn-royal {
